--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,12 @@ repositories {
 
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+
+    compile('org.springframework.boot:spring-boot-starter-data-jpa') {
+        exclude group: 'org.apache.tomcat', module: 'tomcat-jdbc'
+    }
+    compile group: 'com.zaxxer', name: 'HikariCP', version: '3.2.0'
+
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-actuator')
     //runtime('com.h2database:h2')
