--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,10 @@ dependencies {
 
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-actuator')
-    //runtime('com.h2database:h2')
+
     compile('org.projectlombok:lombok')
     compile fileTree(dir: 'libs', include: '*.jar')
 
+    runtime('com.h2database:h2')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
